typescript/checker/tests/conformance/expressions/asOperator/asOperatorContextualType.ts.stderr
error: Expected Comma, got Some(Arrow)
 --> $DIR/tests/conformance/expressions/asOperator/asOperatorContextualType.ts:2:12
  |
2 | var x = (v => v) as (x: number) => string;
  |            ^^

